<resources>
    <string name="app_name">Porter</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>

    <string name="text_create_new_acc"><u>Create new Account</u></string>
    <string name="text_already_have_acc"><u>Already have Account</u></string>

    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Short password</string>
    <string name="error_invalid_confirm_password">Unmatched passwords</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>
    <string name="error_login">Failed to login</string>

    <string name="error_token_does_not_exist">Session ends. Login again</string>

    <string name="table_title_date">Date</string>
    <string name="table_title_number">Number</string>

    <string name="error_get_testing_data">Failed to get data</string>

    <string name="try_again">Try again</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="logout">Logout</string>
    <string name="barcode">Barcode</string>

    <string name="hint_barcode_content">So no one told you life was gonna be this way \n Your job\'s a joke, you\'re
        broke
        \n Your love life\'s D.O.A \n It\'s like you\'re always stuck in second gear \n When it hasn\'t been your day,
        your
        week, your month \n Or even your year, but \n I\'ll be there for you \n (When the rain starts to pour) \n I\'ll
        be
        there for you \n (Like I\'ve been there before) \n I\'ll be there for you \n (\'Cause you\'re there for me too)
    </string>

    <string name="permission_allowed">Ready to scan code</string>

    <string name="error_permission_required">Permission required</string>
    <string name="apply_permission">Apply</string>

</resources>
